@@ -245,7 +245,11 @@ pocc_driver_cloog (scoplib_scop_p program,
   //coptions->strides = 0;
   coptions->quiet = poptions->quiet;
   input = cloog_input_alloc (context, ud);
-  //cloog_input_dump_cloog(stderr, input, coptions);
+  if (poptions->print_cloog_file)
+    {
+      printf ("[PoCC] CLooG input file:\n");
+      cloog_input_dump_cloog(stderr, input, coptions);
+    }
   
   // Generate the clast.
   root = cloog_clast_create_from_input (input, coptions);
