@@ -83,6 +83,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { 'n', "no-codegen", 0, "\tDo not generate code [off]" },
   { '\0', "cloog-cloogf", 1, "CLooG: first level to scan [1]" },
   { '\0', "cloog-cloogl", 1, "CLooG: last level to scan [-1]" },
+  { '\0', "print-cloog-file", 0, "CLooG: print input CLooG file" },
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
   { '\0', "pragmatizer", 0, "\tUse the AST pragmatizer [off]" },
   { '\0', "ptile", 0, "\tUse PTile for parametric tiling [off]" },
@@ -161,6 +162,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { 'n', "no-codegen", 0, "\tDo not generate code [off]" },
   { '\0', "cloog-cloogf", 1, "CLooG: first level to scan [1]" },
   { '\0', "cloog-cloogl", 1, "CLooG: last level to scan [-1]" },
+  { '\0', "print-cloog-file", 0, "CLooG: print input CLooG file" },
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
   { '\0', "pragmatizer", 0, "\tUse the AST pragmatizer [off]" },
   { '\0', "ptile", 0, "\tUse PTile for parametric tiling [off]" },
@@ -570,6 +572,8 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
     options->codegen_timer_asm = 1;
   if (opt_tab[POCC_OPT_CODEGEN_TIMER_PAPI])
     options->codegen_timer_papi = 1;
+  if (opt_tab[POCC_OPT_PRINT_CLOOG_FILE])
+    options->print_cloog_file = 1;
 
   // PAST options.
   if (opt_tab[POCC_OPT_USE_PAST])
