@@ -1,3 +1,12 @@
+2011-08-29  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* driver/pocc/include/pocc/options.h,
+	* driver/pocc/options.c,
+	* driver/pocc/driver-cloog.c,
+	* driver/src/options.h,
+	* driver/src/options.c: Add option --print-cloog-file, which dumps
+	on stderr the CLooG input file.
+
 2011-08-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* driver/src/options.h,
